# anim8

./: Cargo.toml  NOTES.md  README.md
anim8/src/: lib.rs
examples/: basic.rs
samples/: Cargo.toml  LICENSE_MIT
samples/src/: lib.rs  main.rs
src/: lib.rs
