[package]
name = "samples"
version = "0.1.0"
authors = ["James Waples <james@wapl.es>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics = "0.6.0-alpha.3"
embedded-graphics-simulator = "0.2.0-alpha.1"
anim8 = "0.1.0"
